# rotation_classifier

./: .gitignore  dataset.py  dataset2.py  model.py  pyproject.toml  train.py
