[project]
name = "rotation-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.21.0",
]
